<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/person_spinner"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/iva_spinner"
        android:layout_margin="8dp"
        android:layout_below="@id/person_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_import_quantity"
        android:layout_below="@id/iva_spinner"
        android:hint="@string/import_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_iva_quantity"
        android:layout_below="@id/edittext_import_quantity"
        android:hint="@string/iva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_subtotal_quantity"
        android:layout_below="@id/edittext_iva_quantity"
        android:hint="@string/subtotal_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_iva_retention_quantity"
        android:layout_below="@id/edittext_subtotal_quantity"
        android:hint="@string/iva_retention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_isr_retention_quantity"
        android:layout_below="@id/edittext_iva_retention_quantity"
        android:hint="@string/isr_retention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edittext_total_quantity"
        android:layout_below="@id/edittext_isr_retention_quantity"
        android:hint="@string/total_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
